tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_ok@for.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/for.txt
---
Tchoupi||Pilou||Fanny||
name:Moto G||
1.0: true? false?||2.1: false? false?||3.2: false? true?||
Tchoupi
PilouFanny
036147
abab
123
123 -> 3
Empty forloop

0 -> First-Last
104|101|108|108|111|
