tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_ok@for_else.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/for_else.txt
---
else-empty
body:42|
body:1|body:2|body:3|
