tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_ok@functions.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/functions.txt
---
[0, 1]
[-10, -8, -6, -4, -2]
[10, 9, 8, 7, 6, 5, 4, 3, 2, 1]
[10, 7, 4, 1]
