tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_ok@indexing.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/indexing.txt
---
1
1
3
[1, 2]
[1, 2]
[2]
[1]
[1, 3]
[3, 1]
[]
[3, 2, 1]
Mt 
G
G otoM
oto G
Moto 
3
2
3
[3, 2, 1]
[]
[1, 2, 3]
[1, 2, 3]
[3, 2, 1]
[1, 2]
[2, 3]
[1, 2, 3]
