tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_ok@list_comprehension.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/list_comprehension.txt
---
[1, 3]
["1", "2", "3"]
[3, 5, 7]
["names", "weights"]
["FANNY", "PILOU", "TCHOUPI"]
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
[]
[1, 2, 3]
[[1, 2], [3, 4]]
[0, 2, 3]
[]
[]
[1, 2, 3]
[11, 21][12, 22]
[2, 4, 6]
[11, 21][12, 22]
