tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_ok@literals.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/literals.txt
---
Hello
5.0
0
32
18
512
5.0
50
false
true
false
1hello
hello10
true
2
2.1
2
1.9
10.5
10.605
4.0
4.2
10
false
down
world
1.0
3.0
