tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_ok@mixed_numeric_compare.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/mixed_numeric_compare.txt
---
true
false
true
false
false
true
false
true
true
false
true
true
true
