tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_ok@optional_slice_null.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/optional_slice_null.txt
---
fallback-null-slice
fallback-null-rangeslice
fallback-null-stepslice
fallback-undefined-slice
