tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_ok@set_shadows_loop_var.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/set_shadows_loop_var.txt
---
10-99,20-99,
