tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_ok@short_circuit_path.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/short_circuit_path.txt
---
false
true
false
Moto G
