tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_ok@sort_and_unique.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&normalized_out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/sort_and_unique.txt
---
[1, 2, 3]
[1, 1.5, 2.0, 3]
["a", "b", "c"]
[1.0, 2]
2
2
4
